# standalone

./: DESIGN.md  MARKT.md  PLAN.md  PRODUKT.md  README.md
.github/workflows/: desktop.yml
apps/api/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_bankverbindung_passwortreset.py
apps/api/app/: db.py  main.py  migrate.py
apps/api/app/api/: auth_routes.py  fach_routes.py  kanzlei_routes.py  personal_routes.py  verkauf_routes.py
apps/api/app/core/: auth.py  security.py  settings.py
apps/api/app/models/: __init__.py  auth.py  bank.py  bankverbindung.py  fach.py  fibu.py  org.py  personal.py  verkauf.py
apps/api/app/scripts/: seed_demo.py
apps/api/tests/: conftest.py  test_assistent_und_verkauf.py  test_auth_und_zugriff.py  test_bank_sync.py  test_belege_matching.py  test_einstellungen.py  test_haertung.py  test_kern_durchstich.py  test_personal.py
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: assistent.tsx  logo.tsx  mobile-nav.tsx  seiten-intro.tsx  side-nav.tsx
apps/web/lib/: brand.ts  client.ts
apps/web/public/: manifest.webmanifest  sw.js
docs/: DESIGN-BENTO.md
docs/beispiel-extf/: EXTF_Sonnenweg_2026-06.csv  README.md
infra/: deploy-web.sh
(+48 files in other folders)
