[package]
name = "kontoklar-desktop"
version = "0.1.0"
description = "Kontoklar Desktop - duenne Shell um die Live-Web-App"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
strip = true
